# thrift_test

./: .gitignore  CMakeLists.txt  README.md  student.thrift  student_server_complex.cpp  student_server_simple.cpp
gen-java/: pom.xml
gen-java/pers/harry/test/: ComplexStudentServer.java  SimpleStudentServer.java  Student.java  StudentService.java  StudentServiceImpl.java
thrift1/: build.sh  student_client.cpp
thrift1/gen-cpp/: StudentService.cpp  StudentService.h  StudentService_server.skeleton.cpp  student_types.cpp  student_types.h
thrift1/gen-java/: gen-java.ipr  gen-java.iws  pom.xml
thrift1/gen-java/pers/harry/test/: ComplexStudentClient.java  SimpleStudentClient.java
thrift1/src/: student_service_handler.h
thrift2/: CMakeLists.txt  build.sh  test_map.thrift  test_map_client.cpp  test_map_server.cpp
thrift2/gen-cpp/: TestMapService.cpp  TestMapService.h  TestMapService_server.skeleton.cpp  testMapService.cpp  testMapService.h  testMapService_server.skeleton.cpp  test_map_constants.cpp  test_map_constants.h  test_map_types.cpp  test_map_types.h
